# drf-api-deploy

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
books/: models.py  serializer.py  urls.py  views.py
books/migrations/: 0001_initial.py
books_project/: settings.py  urls.py
